# did

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pytest.yaml
docs/: configuration.md  getting-started.md  index.md  testing.md  usage.md
src/did/: __init__.py  anonymizer.py  cli.py  file_utils.py  operators.py  utils.py
src/did/core/: anonymizer.py  general_number_detector.py  models.py  number_detector.py
tests/: test_anonymizer.py  test_file_utils.py
